docs/errors/examples/invalid-allowed-argument/invalid-allowed-argument.grob
// E4101 — @allowed list contains a non-literal value, which cannot be validated at compile time
// Eventual path: docs/errors/examples/invalid-allowed-argument/invalid-allowed-argument.grob
const ENVS := ["dev", "staging", "prod"]

param {
    @allowed(ENVS)
    environment: string := "dev"
}
